<resources>
    <string name="app_name">日租房流动人口信息采集系统</string>
    <!--云平台注册的appid-->
    <string name="tencent_bugly_id">ad234c62a6</string>
    <!--网络请求提示语-->
    <string name="tip_service_exception">连接服务器异常!</string>
    <string name="tip_network_unconnect">网络断开,请检查网络!</string>
    <string name="tip_socket_timeout">网络连接超时!</string>
    <string name="tip_unknown_error">发生未知错误(%1$s)!</string>
    <string name="tip_request_failed">请求数据失败!</string>
    <string name="warming_doubleclick_logout">再次点击退出程序</string> <!-- 两次点击退出 -->
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">暂无数据</string>
    <string name="loading">加载中,请稍后...</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <!-- 所有Module名称 -->
    <string name="module_user_info">用户信息</string>
    <string name="module_change_pwd">修改密码</string>
    <string name="module_sended">已发数据</string>
    <string name="module_will_send">待发数据</string>
    <string name="module_about">关于</string>
    <string name="module_about_us">关于我们</string>
    <string name="module_register">入住登记</string>
    <string name="module_check_out">退房</string>
    <string name="module_change_room">换房</string>
    <string name="module_room_list">房间列表</string>
    <string name="module_new_notice">最新通知</string>
    <!--login和修改密码模块-->
    <string name="tip_appname">日租房流动人口信息采集APP</string>
    <string name="hint_username">账号</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_old_password">旧密码</string>
    <string name="hint_new_password">新密码</string>
    <string name="hint_confirm_password">确认新密码</string>
    <string name="txt_login">登录</string>
    <string name="tip_auto_login">自动登录</string>
    <string name="txt_forget_pdw">忘记密码</string>
    <string name="txt_confirm_change">确认修改</string>
    <string name="warming_empty_account">请输入账号</string>
    <string name="warming_empty_old_pwd">请输入旧密码</string>
    <string name="warming_empty_new_pwd">请输入新密码</string>
    <string name="warming_old_same_with_new">新密码不能与旧密码相同</string>
    <string name="warming_twice_no_same">两次密码输入不一致</string>
    <string name="password_successfully_modified">修改密码成功！</string>
    <!--入住登记和退房模块-->
    <string name="action_editor">编辑</string>
    <string name="hint_select">请选择</string>
    <string name="title_room_no">客房号：</string>
    <string name="title_room_number">房间数：</string>
    <string name="title_person_number">随行人数：</string>
    <string name="title_name">姓名：</string>
    <string name="title_sex">性别：</string>
    <string name="title_nation">民族：</string>
    <string name="title_birthday">出生：</string>
    <string name="title_certificates_type">证件类型：</string>
    <string name="txt_certificates_type">身份证</string>
    <string name="title_certificates_code">证件号：</string>
    <string name="title_address">住址：</string>
    <string name="title_check_time">入住时间：</string>
    <string name="title_from">来自：</string>
    <string name="title_check_out_time">退房时间：</string>
    <string name="title_certificates_img">证件照片</string>
    <string name="title_personal_img">人员照片</string>
    <string name="txt_confirm_upload">确认上传</string>
    <string name="txt_check_out">确认退房</string>
    <string name="txt_change">确认换房</string>
    <string name="warming_no_info">没有读取到用户信息</string>
    <string name="warming_no_custom_name">请输入用户名</string>
    <string name="warming_no_custom_sex">请输入用户性别</string>
    <string name="warming_no_custom_nation">请输入用户民族</string>
    <string name="warming_no_certificates_code">请输入证件号</string>
    <string name="warming_id_card_validated">输入的身份证号不合法</string>
    <string name="warming_no_room_code">请选择房间</string>
    <string name="warming_no_same_room">请选择新的房间</string>
    <string name="warming_no_room_num">请输入有效的预定房间数</string>
    <string name="warming_room_num_limit">房间数超过上限</string>
    <string name="warming_no_person_num">请输入有效的随行人数</string>
    <string name="title_new_room_no">选择新房间号：</string>
    <string name="title_old_room_no">原房间号：</string>
    <!--关于模块-->
    <string name="txt_version">版本信息</string>
    <string name="txt_updata">检测升级</string>
    <string name="txt_userinfo">用户信息</string>
    <string name="txt_about_us">关于我们</string>
    <string name="txt_logout">注销登录</string>
    <!--用户信息模块-->
    <string name="title_nickname">用户昵称:</string>
    <string name="title_phone">手机号:</string>
    <string name="title_type">人员类型:</string>
    <string name="title_area">所在区域:</string>
    <string name="title_police">辖区派出所:</string>
    <string-array name="idcard_type_array">
        <item>身份证</item>
        <item>居住证</item>
        <item>签证</item>
        <item>护照</item>
        <item>户口本</item>
        <item>军人证</item>
        <item>团员证</item>
        <item>党员证</item>
        <item>港澳通行证</item>
        <item>其他</item>
    </string-array>
    <!--用户信息模块-->
    <string name="about_us_tip1">您可以通过以下方式联系我们</string>
    <string name="about_us_contact1">微信公众号</string>
    <string name="about_us_gongzhonghao">安徽乐蛙科技公众号</string>
    <string name="about_us_contact2">客服电话</string>
    <string name="about_us_service_contact">客服电话：0551-16888888</string>
    <string name="about_us_service_time">周一至周五：9:30-18:00</string>
    <string name="about_us">安徽乐蛙科技</string>
    <string name="about_us_intro">安徽乐蛙信息科技有限公司位于合肥市瑶海区长江东路743号中翔.新东城大厦1-1016交通便利。安徽乐蛙信息科技有限公司本着“客户第一，诚信至上”的原则，欢迎国内外企业/公司/机构与本单位建立长期的合作关系。热诚欢迎各界朋友前来参观、考察、洽谈业务。施浩代表安徽乐蛙信息科技有限公司欢迎新老客户来电咨询。</string>
</resources>
