<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color">

    <RelativeLayout
        android:id="@+id/rlayout_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llayout_login"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="160dp"
            android:layout_centerInParent="true"
            android:layout_height="160dp"
            android:layout_marginBottom="11dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_login"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xxxxl"
             />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_margin="10dp"
        android:background="@drawable/common_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlayout_version"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:id="@+id/icon_account"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/account" />

            <ImageView
                android:id="@+id/img_del_uname"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/image_delete"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/border_line" />

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:layout_toLeftOf="@+id/img_del_uname"
                android:inputType=""
                android:maxLines="1"
                android:textSize="@dimen/text_size_xl"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/icon_account" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:id="@+id/icon_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/password" />

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="26dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@drawable/view_pwd" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/border_line" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:hint="@string/hint_pwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:layout_toRightOf="@+id/icon_password"
                android:layout_toLeftOf="@+id/img_view"
                android:maxLines="1"
                android:textSize="@dimen/text_size_xl"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:id="@+id/checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/checkbox"
                android:text="@string/tip_auto_login"
                android:textColor="@color/txt_color3"
                android:textSize="@dimen/text_size_m" />

            <TextView
                android:id="@+id/txt_forgot_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/txt_forget_pdw"
                android:textColor="@color/txt_color3"
                android:textSize="@dimen/text_size_m" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/common_btn_selector2"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_xxl" />
</RelativeLayout>


